[project]
name = "deck-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lubert.roxas", email = "lubert.roxas@starburstdata.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "geopandas>=0.14",
    "contextily>=1.6",
    "rasterio>=1.3.10",
    "jupyterlab",
    "ipykernel"
]

[project.scripts]
deck-visualization = "deck_visualization:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
