[project]
name = "streamlit-network-explorer"
version = "0.1.0"
description = "Streamlit app to explore large graphs (~1700 nodes) with click-to-inspect and neighbor highlighting."
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }

dependencies = [
  "streamlit>=1.36",
  "streamlit-agraph>=0.0.45",
  "networkx>=3.2",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "xlsxwriter>=3.2",
  "pytest>=8.0",
  "pre-commit>=3.7",
  "ruff>=0.5",
  "pydeck>=0.9",
  "PyYAML>=6.0"
]

[tool.uv]
default-python = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
