[project]
name = "streamlit-network-explorer"
version = "0.1.0"
description = "Streamlit app to explore large graphs (~1700 nodes) with click-to-inspect and neighbor highlighting."
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }

dependencies = [
  "streamlit>=1.36",
  "streamlit-agraph>=0.0.45",
  "networkx>=3.2",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "xlsxwriter>=3.2",
  "pytest>=8.0",
  "pre-commit>=3.7",
  "ruff>=0.5",
  "pydeck>=0.9",
  "PyYAML>=6.0",
  "folium>=0.20.0",
  "streamlit-folium>=0.25.1",
  "lime>=0.2.0.1",
  "xgboost>=3.0.4",
]

[project.scripts]
network-explorer = "streamlit_network_explorer.minimal_usage:main"
